<resources>
    <string name="app_name">AssignmentOne</string>
    <string name="_4">4</string>
    <string name="_7">7</string>
    <string name="c">C</string>
    <string name="_0">0</string>
    <string name="_multiply">*</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_6">6</string>
    <string name="_equals">=</string>
    <string name="_5">5</string>
    <string name="_division">/</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_addition">+</string>
    <string name="_standard">Standard</string>
    <string name="_percent">%</string>
    <string name="_power">POW</string>
    <string name="_maximum">MAX</string>
    <string name="_minimum">MIN</string>
    <string name="_minus">-</string>
    <string name="not_an_op">Not An Operator</string>
    <string name="advance_with_history">ADVANCE - WITH HISTORY</string>
</resources>